# geotools

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  mkdocs.yml
cmake/: Findlibigl.cmake  GeotoolsDownloadExternal.cmake  GeotoolsImport.cmake.in  UseColors.cmake  geogram.cmake  geotools.cmake
convert_mesh/: CMakeLists.txt  README.md  main.cpp
docs/js/: extra.js
meshvox/: CMakeLists.txt  FindGeogram.cmake  main.cpp
normalize/: CMakeLists.txt  FindGeogram.cmake  README.md  main.cpp
normalize_mesh/: CMakeLists.txt  main.cpp
poisson_disk/: CMakeLists.txt  README.md  main.cpp  poisson_disk.h  poisson_disk.hpp  random.cpp  vec.h
poissondisk/: CMakeLists.txt  README.md  chrono.h  main.cpp  poisson_disk.h  poisson_disk.hpp  random.h
range_tree/: RangeTree.cpp  RangeTree.h  tests.cpp
sdf/: CMakeLists.txt  main.cpp  mesh_AABB.cpp  mesh_AABB.h
sdf/kernels/: common.cl  geom.cl  search.cl
voxmesh/: CMakeLists.txt  README.md  TODO.md  attributes.h  common.h  get_bunny.sh  main.cpp  octree.cpp  octree.h  visualize.py
