################################################################################
cmake_minimum_required(VERSION 3.0)
project(geotools)
################################################################################

add_subdirectory(normalize_mesh)
add_subdirectory(poisson_disk)
add_subdirectory(voxmesh)
